2019-03-08  YunQiang Su  <ysu@wavecomp.com>

	* config.guess (mips:Linux:*:*): Detect ISA R6.

2019-03-04  Urs Janßen <urs@tin.org>

	* config.guess (m68k-sony-newsos, mips-dec-ultrix3): Restore C
	program that detects these systems.

2019-02-19  Urs Janßen <urs@tin.org>

	* config.guess (i*86:*:5:[678]*): Fix Unixware output.

2019-01-20  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.sh (run_config_guess): For clarity, write
	uname replacement to './uname', not 'uname'.

2019-01-15  Ben Elliston  <bje@gnu.org>

	Revert:
	2019-01-03  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config.guess (sun4*:SunOS:5.*:*): Return sparcv9-sun-solaris2.*
	with 64-bit compiler.
	(tadpole*:SunOS:5.*:*): Likewise.

2019-01-05  Ben Elliston  <bje@gnu.org>

	* config.sub (shl): Recognise.
	* testsuite/config-sub.data: Add a test case.

2019-01-05  Ben Elliston  <bje@gnu.org>

	* config.sub: Move v70, w65 and others into sort order.

2019-01-04  Ben Elliston  <bje@gnu.org>

	* config.sub (mips64eb): Recognise.
	* testsuite/config-sub.data: Add a test case for mips64eb.

2019-01-03  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.data: Add more test cases.

2019-01-03  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config.guess (sun4*:SunOS:5.*:*): Return sparcv9-sun-solaris2.*
	with 64-bit compiler.
	(tadpole*:SunOS:5.*:*): Likewise.

2019-01-03  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.data: Add a test for ARM Linux.

	* testsuite/config-guess.data: Add new tests for Solaris on i386
	and SPARC machines.

2019-01-03  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.sh (run_config_guess): Set CC_FOR_BUILD
	to no_compiler_found so that we don't erroneously use the compiler
	of the host running the testsuite.
	* testsuite/config-guess.data: Adjust ARM FreeBSD expected output.

2019-01-01  Ben Elliston  <bje@gnu.org>

	* config.guess: Update copyright years.
	* config.sub: Likewise.
	* doc/config.guess.1: Regenerate.
	* doc/config.sub.1: Likewise.
